--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <header class="border-b-4 border-blue-800 pb-2 mb-6 flex justify-between items-end break-inside-avoid">
             <div class="max-w-[80%]">
                 <h1 class="text-2xl font-bold text-blue-900 tracking-wide">Tri-Service General Hospital</h1>
-                <p class="text-xs text-gray-600 font-bold mb-1">TSGH Department of Clinical Pharmacy</p>
+                <p class="text-xs text-gray-600 font-bold mb-1"> Department of Clinical Pharmacy</p>
                 <h2 class="text-xl font-bold text-gray-800 leading-tight">Guarding After Brain Injury: Post-Traumatic Epilepsy Medication Guide</h2>
             </div>
             <div class="text-right flex flex-col items-end justify-end">
@@ -442,4 +442,5 @@
     </div>
 
 </body>
+
 </html>
