--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 </div>
 
                 <div class="flex flex-col items-center">
-                    <img src="https://raw.githubusercontent.com/Almightyhao/Seizure-Prevention/main/%E5%8F%B0%E8%AA%9E%E8%A1%9B%E6%95%99.png" 
+                    <img src="https://raw.githubusercontent.com/Almightyhao/Seizure-Prevention/main/english.png" 
                          alt="English Video" 
                          class="w-20 h-20 border border-gray-300 p-1 mb-1">
                     <span class="font-bold text-blue-900 text-sm">English Video</span>
@@ -444,3 +444,4 @@
 </body>
 
 </html>
+
