--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <footer class="mt-4 border-t-2 border-gray-200 pt-3 text-center avoid-break">
                 <p class="font-bold text-gray-700 mb-1">TSGH Medication Consultation: 02-87923311 ext 88105</p>
                 <div class="text-gray-500 text-xs mb-3">References: TSGH Leaflets, Taiwan Epilepsy Society, UpToDate</div>
-
+                <div class="text-gray-500 text-xs mb-3"> Medication Guide (Video)</div>
                 <div class="flex justify-center items-end gap-10 mb-2">
                     <div class="flex flex-col items-center">
                         <img src="https://raw.githubusercontent.com/Almightyhao/Seizure-Prevention/main/%E5%9C%8B%E8%AA%9E%E8%A1%9B%E6%95%99.png" class="w-16 h-16 border p-1 mb-1">
@@ -313,3 +313,4 @@
 
 </body>
 </html>
+
